Move focus to option button in translate bubble.

As the options button doesn't make the dialog bubble go away focus needs
to be moved to it.

Bug: chromium:806729
Change-Id: I78fcdfbf098d0b44b2beec47ec6446b09a89c6c2
Reviewed-on: https://chromium-review.googlesource.com/894858
Reviewed-by: Bret Sepulveda <bsep@chromium.org>
Commit-Queue: Peter Boström <pbos@chromium.org>
Cr-Commit-Position: refs/heads/master@{#533464}
Former-commit-id: 5b2d1d1e3229e3af1d3687c3e9626664623f6166